syntax = "proto3";
package auth;
option go_package = "./auth";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (AuthResponse);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message VerifyEmailRequest {
  string token = 1;
}

message AuthResponse {
  string message = 1;
  string token = 2;
  User user = 3;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string mobile_number = 4;
  string gender = 5;
  string date_of_birth = 6;
  string image = 7;
  bool is_verified = 8;
  bool is_admin = 9;
  bool is_blocked = 10;
  repeated string cart = 11;
  repeated string addresses = 12;
}
